Update vendordep.yml to include 'vendordep' branch in push events

--- a/.github/workflows/vendordep.yml
+++ b/.github/workflows/vendordep.yml
@@ -2,7 +2,7 @@ name: Vendordep
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, vendordep ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
