--- a/.github/workflows/vendordep.yml
+++ b/.github/workflows/vendordep.yml
@@ -87,6 +87,15 @@ jobs:
           cmake --build build
           python3 vendordep/vendordep.py --version="0.0.1" --cross
 
+      - name: Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-deps
+          path: |
+            build/vendordep/*.zip
+            build/vendordep/*.pom
+            build/vendordep/*.json
+  
   macos:
     name: macOS
     runs-on: macos-latest
@@ -115,6 +124,12 @@ jobs:
         run: |
           cmake --build build
           python3 vendordep/vendordep.py --version="0.0.1" --local
+      
+      - name: Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-deps
+          path: build/vendordep/*.zip
 
   windows:
     name: Windows
@@ -157,7 +172,13 @@ jobs:
         run: |
           cmake --build build
           python vendordep/vendordep.py --version="0.0.1" --local
-  
+
+      - name: Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-deps
+          path: build/vendordep/*.zip
+
   vendordep:
     needs: [ 'linux', 'macos', 'windows' ]
     name: Vendordep
@@ -167,3 +188,23 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: false
+      
+      - name: Assemble
+        uses: actions/download-artifact@v4
+        with:
+          path: build/vendordep
+          merge-multiple: true
+
+      - name: Install
+        run: | 
+          mkdir -p build/html/maven
+          cp build/vendordep/LuaBot.json build/html
+          cp vendordep/index.html build/html
+          python3 vendordep/vendordep.py --version="0.0.1" --install --prefix="$(pwd)/build/html/maven"
+
+      - name: Publish
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: build/html
+          force_orphan: true
