--- a/.github/workflows/vendordep.yml
+++ b/.github/workflows/vendordep.yml
@@ -206,10 +206,13 @@ jobs:
           cp vendordep/index.html build/html
           python3 vendordep/vendordep.py --version="0.0.1" --install --prefix="$(pwd)/build/html/maven"
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          path: build/html
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+      - name: Deploy to S3
+        run: |
+          aws s3 sync build/html/maven s3://luabot/maven/
