--- a/.github/workflows/vendordep.yml
+++ b/.github/workflows/vendordep.yml
@@ -215,3 +215,4 @@ jobs:
       - name: Deploy
         run: |
           aws s3 sync build/maven s3://luabot/maven/
+          aws cloudfront create-invalidation --distribution-id E3QY5NK3CA5GKI --paths "/*"
