Rename workflow from "Deploy to GitHub Pages" to "Pages"

--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -1,10 +1,10 @@
-name: Deploy to GitHub Pages
+name: Pages
 
 on:
   push:
     branches: [ vendordep ]
-    paths:
-      - 'vendordep/index.html'
+    # paths:
+    #   - 'vendordep/index.html'
   workflow_dispatch:
 
 permissions:
