Update workflow to trigger on both main and vendordep branches

--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -2,9 +2,9 @@ name: Pages
 
 on:
   push:
-    branches: [ vendordep ]
-    # paths:
-    #   - 'vendordep/index.html'
+    branches: [ main, vendordep ]
+    paths:
+      - 'vendordep/index.html'
   workflow_dispatch:
 
 permissions:
