fix: restrict workflow trigger to only the vendordep branch

--- a/.github/workflows/vendordep.yml
+++ b/.github/workflows/vendordep.yml
@@ -2,9 +2,7 @@ name: Vendordep
 
 on:
   push:
-    branches: [ main, vendordep ]
-  pull_request:
-    branches: [ main ]
+    branches: [ vendordep ]
   workflow_dispatch:
 
 jobs:
