--- a/REUSE.toml
+++ b/REUSE.toml
@@ -2,7 +2,8 @@ version = 1
 
 [[annotations]]
 path = [
-    ".github/**/*.md",
+    "**/*.md",
+    "**/*.html",
     "README.md"
 ]
 SPDX-FileCopyrightText = "Michael Fisher @mfisher31"
@@ -13,6 +14,7 @@ path = [
     "**/*.yaml",
     "**/*.yml",
     "**/*.json.in",
+    "**/*.pom.in",
     ".gitignore",
     ".gitmodules",
     ".clang-format",
