WPILib Vendordep Assemply and Deployment (#15)
* vendordep: experimenting without structure and layout of artifacts
* Implement vendordep structure with CMake integration and Python script for artifact generation. working for desktop builds.
* Update Dockerfile and vendordep.py for luabot-stub library integration and path adjustments on roborio
* Enhance main function: add --stubs option for generating stub zips and update --install help text to clarify stub generation
* Update LuaBot.json and vendordep.py: restructure dependencies and add Lua bindings creation
* Update LuaBot.json.in: set version to @PROJECT_VERSION@
for luabot-lua dependency
* Remove vendordep.md: eliminate outdated vendor dependency documentation
* Refactor vendordep build process: rename custom target and add LuaJIT module creation
* Add GitHub Actions workflow for multi-platform build process
* Rename workflow from "Build" to "Vendordep" for clarity
* Fix typo in workflow name from "Vencdordep" to "Vendordep"
* REname vendordep yaml
* Fix mkdir command to create directory with -p option in LuaBot Stub step
* Update vendordep.yml to include 'vendordep' branch in push events
* Add artifact upload steps for Linux, macOS, and Windows; create index.html for LuaBot documentation
* Update vendordep workflow to add permissions and change artifact upload steps
* vendordep: update workflow to configure AWS credentials and deploy to S3
* Refactor vendordep workflow to adjust directory structure and update AWS deployment steps
* Add GitHub Pages deployment workflow and update vendordep install steps
* vendordep: invalidate cloudfront for maven.
* Rename workflow from "Deploy to GitHub Pages" to "Pages"
* Update workflow to trigger on both main and vendordep branches
* Fix: add a newline before the body tag in index.html
* fix: restrict workflow trigger to only the vendordep branch
* fix reuse compliance

--- a/.github/workflows/vendordep.yml
+++ b/.github/workflows/vendordep.yml
@@ -1,6 +1,8 @@
 name: Vendordep
 
 on:
+  push:
+    branches: [ vendordep ]
   workflow_dispatch:
 
 jobs:
@@ -68,7 +70,7 @@ jobs:
 
       - name: LuaBot Stub (linuxathena)
         run: |
-          mkdir /tmp
+          mkdir -p /tmp
           arm-frc2025-linux-gnueabi-gcc -c vendordep/stub.c -o /tmp/stub.o && \
           arm-frc2025-linux-gnueabi-ar rcs 3rdparty/linuxathena/lib/libluabot-stub.a /tmp/stub.o
 
@@ -83,6 +85,15 @@ jobs:
           cmake --build build
           python3 vendordep/vendordep.py --version="0.0.1" --cross
 
+      - name: Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-deps
+          path: |
+            build/vendordep/*.zip
+            build/vendordep/*.pom
+            build/vendordep/*.json
+  
   macos:
     name: macOS
     runs-on: macos-latest
@@ -111,6 +122,12 @@ jobs:
         run: |
           cmake --build build
           python3 vendordep/vendordep.py --version="0.0.1" --local
+      
+      - name: Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-deps
+          path: build/vendordep/*.zip
 
   windows:
     name: Windows
@@ -153,14 +170,47 @@ jobs:
         run: |
           cmake --build build
           python vendordep/vendordep.py --version="0.0.1" --local
-  
+
+      - name: Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-deps
+          path: build/vendordep/*.zip
+
   vendordep:
     needs: [ 'linux', 'macos', 'windows' ]
     name: Vendordep
     runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           submodules: false
       
+      - name: Assemble
+        uses: actions/download-artifact@v4
+        with:
+          path: build/vendordep
+          merge-multiple: true
+
+      - name: Install
+        run: | 
+          mkdir -p build/maven
+          python3 vendordep/vendordep.py --version="0.0.1" --install --prefix="$(pwd)/build/maven"
+          cp build/vendordep/LuaBot.json build/maven
+
+      - name: Setup AWS
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Deploy
+        run: |
+          aws s3 sync build/maven s3://luabot/maven/
+          aws cloudfront create-invalidation --distribution-id E3QY5NK3CA5GKI --paths "/*"
