fix: update workflow triggers and fix URLs in index.html and LuaBot.json.in

--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -2,7 +2,7 @@ name: Pages
 
 on:
   push:
-    branches: [ main, vendordep ]
+    branches: [ main ]
     paths:
       - 'vendordep/index.html'
   workflow_dispatch:
