vendordep: action: put back X11 deps.  wpilib needs if even if not actually building.

--- a/.github/workflows/vendordep.yml
+++ b/.github/workflows/vendordep.yml
@@ -38,7 +38,18 @@ jobs:
             gnupg \
             java-common \
             libc6-dev \
+            libgl1-mesa-dev \
+            libglu1-mesa-dev \
+            libisl-dev \
+            libopencv-dev \
+            libvulkan-dev \
+            libx11-dev \
+            libxcursor-dev \
+            libxi-dev \
+            libxinerama-dev \
+            libxrandr-dev \
             make \
+            mesa-common-dev \
             ninja-build \
             pkg-config \
             python3-dev \
