docs: update LuaBot Copilot instructions for doc comment formatting and add VSCode settings for Lua formatter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,8 @@
         "${workspaceFolder}/bindings/?/init.lua",
         "${workspaceFolder}/build/lua/?.lua",
         "${workspaceFolder}/build/lua/?/init.lua"
-    ]
+    ],
+    "[lua]": {
+        "editor.defaultFormatter": "sumneko.lua",
+    }
 }
